--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>jade</artifactId>
             <version>4.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jxmapviewer</groupId>
+            <artifactId>jxmapviewer2</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
 
