--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>postgis-jdbc</artifactId>
             <version>2.1.7.2</version>
         </dependency>
+        <dependency>
+          <groupId>com.opencsv</groupId>
+          <artifactId>opencsv</artifactId>
+          <version>3.9</version>
+        </dependency>
     </dependencies>
 
 
